--- a/js-grammar/js-stopwatch.html
+++ b/js-grammar/js-stopwatch.html
@@ -8,6 +8,6 @@
   <body>
     <p id="timer"></p>
     <button onclick="cli()">ボタン</button>
-    <script src="function.js"></script>
+    <script src="stopwatch.js"></script>
   </body>
 </html>
