--- a/css-study/self-introduction.html
+++ b/css-study/self-introduction.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>多田富雄の自己紹介</title>
+    <link rel="stylesheet" href="self-introduction.css" />
   </head>
   <body>
     <h1>多田富雄</h1>
